--- a/computer project/stage2.css
+++ b/computer project/stage2.css
@@ -57,8 +57,8 @@ footer {
     width:250px;
     background-color: #fff;
     border-radius: 8px;
-    box-shadow: 5px 5px 10px rgb(241, 7, 7);
-    border:0;
+    box-shadow: 5px 5px 10px rgb(7, 241, 124);
+    border:2px solid rgb(7, 241, 124);
 }
 #fake{
     width:350px;
